Sentora 2.0.0 Updates/Fixes/security patches with PHP 7+ support
Sentora 2.0.0 Updates/Fixes/security patches with PHP 7+ support

--- a/preconf/apache/httpd.conf
+++ b/preconf/apache/httpd.conf
@@ -10,7 +10,7 @@ ServerName localhost
 # Setup the directory settings and PHP security flags for the Sentora application directory.
 <Directory /etc/sentora/panel>
     Options +FollowSymLinks
-    DirectoryIndex index.php
+    DirectoryIndex index.php index.html
     <IfModule mod_php5.c>
         AddType application/x-httpd-php .php
         php_flag magic_quotes_gpc Off
@@ -33,14 +33,5 @@ ServerName localhost
 # Set server tokens
 ServerTokens Prod
 
-# Default apache vhost to disable direct IP access to panel
-<VirtualHost *:80>
-  ServerName default
-  DocumentRoot /var/sentora/hostdata/zadmin/public_html
-    <Location />
-        Require all denied
-    </Location>
-</VirtualHost>
-
-# Include the full VHOST configuration file that holds all Sentora hosted vhosts
+# Now we include the generic VHOST configuration file that holds all Sentora user hosted vhost data
 Include /etc/sentora/configs/apache/httpd-vhosts.conf
