--- a/preconf/bind/named.conf
+++ b/preconf/bind/named.conf
@@ -20,7 +20,7 @@ options {
 
     dnssec-enable yes;
     dnssec-validation yes;
-    dnssec-lookaside auto;
+    dnssec-lookaside no;
 
     /* Path to ISC DLV key */
     bindkeys-file "/etc/named.iscdlv.key";
